--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="header">
 			<h1>OMDb Movie Database</h1>
 			<form class="movie-form">
-				<input type="search" id="search-field" placeholder="Search Movie Title" required>
+				<input type="search" id="search-field" placeholder="Search movie title" required>
 				<input type="submit" id="search-submit" value="Search">
 			</form>
 			<div id="button-wrapper">
@@ -27,7 +27,7 @@
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-		<script type="text/javascript" src="spin.js"></script>
-		<script type="text/javascript" src="main.js"></script>
+		<script src="spin.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
