--- a/index.html
+++ b/index.html
@@ -15,16 +15,10 @@
 			</form>
 			<div id="button-wrapper">
 				<button >Find Random Movies</button>
-			</div>
-		</div>
-
-		<div class="container">
-			<ul id="movie-list"></ul>
-		</div>
-
-		<footer>
-			<div id="spinner"></div>
-		</footer>
+			</div></div>
+		<div class="container"><ul id="movie-list"></ul></div>
+		<div id="scrollToTop">&#65514</div>
+		<footer><div id="spinner"></div></footer>
 
 		<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 		<script src="spin.js"></script>
