fix infinite scroll in chrome

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<button >Find Random Movies</button>
 			</div></div>
 		<div class="container"><ul id="movie-list"></ul></div>
-		<div id="scrollToTop">&#65514</div>
+		<div id="scrollToTop">Top</div>
 		<footer><div id="spinner"></div></footer>
 
 		<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
