change index view

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 			<h1>OMDb Movie Database</h1>
 			<form class="movie-form">
 				<input type="search" id="search-field" placeholder="Search movie title" required>
-				<input type="submit" id="search-submit" value="Search">
+				<input type="submit" id="search-submit" value="Search" class="btn">
 			</form>
 			<div id="button-wrapper">
-				<button >Find Random Movies</button>
-			</div></div>
+				<button class="btn">Find Random Movies</button>
+			</div>
+		</div>
 		<div class="container"><ul id="movie-list"></ul></div>
 		<div id="scrollToTop">Top</div>
 		<footer><div id="spinner"></div></footer>
